[package]
name = "serde-strz"
description = "A serde wrapper that stores type using Display and FromStr."
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["serde", "string", "display", "fromstr", "serialization"]
categories = ["encoding"]
homepage = "https://github.com/ZaneHannanAU/serde-str"
documentation = "https://docs.rs/serde-strz"
version = "1.1.1"
authors = ["paul@colomiets.name", "zanehannanau@gmail.com"]
edition = "2018"

[dependencies]
serde = "1"

[dev-dependencies]
serde_derive = "1"
serde_json = "1"
